# ai-automation-agent

ai-automation-agent/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  check_setup.py  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ai-automation-agent/src/core/: agent.py
ai-automation-agent/src/services/: openai_client.py
ai-automation-agent/src/utils/: config.py
ai-automation-agent/tests/: test_basic.py  test_openai_connection.py
